test/should-fail/vsgc549b.f3
/* 
 * @test/compile-error
 *
 * An example of an error that finds an identifier where it doesn't expect one.
 * Also, it trips over the "}", which produces the kind of error message 
 * without the clarification, so I get two for one.
 */

class Node {
    whatever: Number;
};
